@@ -1,6 +1,4 @@
-#   Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009,
-#                 2010, 2011, 2012, 2013, 2014, 2015
-#                 Free Software Foundation, Inc.
+#   Copyright (C) 2001-2019 Free Software Foundation, Inc.
 
 # This file is part of GNU Modula-2.
 
