@@ -1,6 +1,5 @@
 /* Language-dependent hooks for GNU Modula-2.
-   Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
- *               Free Software Foundation, Inc.
+   Copyright (C) 2003-2010 Free Software Foundation, Inc.
    Contributed by Gaius Mulley <gaius@glam.ac.uk>
 
 This file is part of GNU CC.
