@@ -1,5 +1,4 @@
-/* Copyright (C) 2006, 2007, 2008, 2009, 2010
-#                Free Software Foundation, Inc. */
+/* Copyright (C) 2006-2010 Free Software Foundation, Inc. */
 /* This file is part of GNU Modula-2.
 
 GNU Modula-2 is free software; you can redistribute it and/or modify it under
